--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Стивен джобс &mdash; Résumé" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yrpryhoda.github.io/homepage/" />
-    <link rel="icon" type="image/x-icon" href="./favicon.png" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="me" href="https://github.com/YrPryhoda" type="text/html" />
     <link rel="me" href="mailto:encored@i.ua" />
     <link rel="me" href="https://t.me/valarok" />
