--- a/index.html
+++ b/index.html
@@ -42,18 +42,125 @@
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
-                <!-- Avatar -->
+                <div class="avatar-wrapper">
+                  <object
+                    class="avatar"
+                    data="./assets/images/avatar.jpg"
+                    role="img"
+                    aria-label="My profile picture"
+                  ></object>
+                </div>
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
-                    <!-- Name, job, contacts -->
+                    <h1 class="name">Стивен Пол Джобс</h1>
+                    <div class="job">
+                      Председатель совета директоров Apple Inc.
+                    </div>
+                    <ul class="contacts">
+                      <li>
+                        <a
+                          href="mailto:apple's_father@gmail.com"
+                          rel="author"
+                          class="mail"
+                        >
+                          <svg
+                            class="icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 512 512"
+                          >
+                            <path
+                              d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
+                            ></path>
+                          </svg>
+                          <span>apple's_father@gmail.com</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://twitter.com/StevenPaulJobs_"
+                          rel="author"
+                          class="facebook"
+                          target="_blank"
+                          noopener
+                          noreferrer
+                        >
+                          <svg
+                            class="icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                          >
+                            <path
+                              d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016
+                          c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992
+                          c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056
+                          c0,36.352,18.72,68.576,46.624,87.232c-16.864-0.32-33.408-5.216-47.424-12.928c0,0.32,0,0.736,0,1.152
+                          c0,51.008,36.384,93.376,84.096,103.136c-8.544,2.336-17.856,3.456-27.52,3.456c-6.72,0-13.504-0.384-19.872-1.792
+                          c13.6,41.568,52.192,72.128,98.08,73.12c-35.712,27.936-81.056,44.768-130.144,44.768c-8.608,0-16.864-0.384-25.12-1.44
+                          C46.496,446.88,101.6,464,161.024,464c193.152,0,298.752-160,298.752-298.688c0-4.64-0.16-9.12-0.384-13.568
+                          C480.224,136.96,497.728,118.496,512,97.248z"
+                            />
+                          </svg>
+                          <span>StevenPaulJobs_</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="tel:+1 800 275 2273"
+                          rel="author"
+                          class="phone"
+                        >
+                          <svg
+                            class="icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 320 512"
+                          >
+                            <path
+                              d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
+                            ></path>
+                          </svg>
+                          <span>+1 800 275 2273</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="http://steven-jobs.ru/"
+                          rel="author"
+                          target="_blank"
+                          noopener
+                          noreferrer
+                        >
+                          <svg
+                            class="icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 496 512"
+                          >
+                            <path
+                              fill="currentColor"
+                              d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
+                            ></path>
+                          </svg>
+                          <span>http://steven-jobs.ru/</span>
+                        </a>
+                      </li>
+                    </ul>
                   </div>
                   <div class="sixteen wide mobile only column">
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <!-- Intro -->
+                    <h2>Резюме</h2>
+                    <p>
+                      &dash; Цель — ищу прибежище, требующее ремонта или
+                      реконструкции, но имеющее надёжный фундамент. Готов
+                      крушить стены, возводить мосты и монтировать освещение. За
+                      плечами огромный опыт, отличаюсь бешеной энергией, обладаю
+                      тем, что называют «видение сути». Не боюсь начать с нуля.
+                      Полезные навыки — то самое «видение сути», опыт публичных
+                      выступлений, умею воодушевлять людей и помогать им в
+                      создании чего-либо грандиозного.
+                    </p>
                   </div>
                 </div>
               </div>
