--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://volodymyrkushnir.com/assets/stylesheets/base.css"
     />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="theme-color" content="white" />
     <meta
@@ -46,12 +47,18 @@
       <article>
         <div class="page" style="border-color: midnightblue;">
           <div class="stackable grid">
+            <div class=" my-header">
+              <h2 class="name">Стивен Пол Джобс</h2>
+              <div class="job">
+                Исполнительный директор &#44; глава совета директоров корпорации
+                Apple Inc.
+              </div>
+            </div>
             <div class="row">
               <div class="three wide center aligned column">
                 <div class="avatar-wrapper">
                   <img
                     class="avatar"
-                    style="max-width: 202px"
                     src="./assets/images/avatar.svg"
                     alt="Profile avatar"
                   />
@@ -60,11 +67,6 @@
               <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
-                    <h1 class="name">Стивен Пол Джобс</h1>
-                    <div class="job" style="font-style: italic">
-                      Исполнительный директор &#44; глава совета директоров
-                      корпорации Apple Inc.
-                    </div>
                     <ul class="contacts">
                       <li>
                         <a
@@ -88,7 +90,7 @@
                         <a
                           href="https://twitter.com/StevenPaulJobs_"
                           rel="author noopener noreferrer"
-                          class="facebook"
+                          class="icon twitter"
                           target="_blank"
                         >
                           <svg
@@ -155,7 +157,7 @@
                   </div>
                   <div class="sixteen wide column">
                     <h2>Резюме</h2>
-                    <p class="intro" style="text-align: justify">
+                    <p class="intro" style="text-align: justify;">
                       &dash; Цель — ищу прибежище, требующее ремонта или
                       реконструкции, но имеющее надёжный фундамент. Готов
                       крушить стены, возводить мосты и монтировать освещение. За
@@ -576,7 +578,7 @@
       </article>
     </main>
     <footer>
-      <strong>Работать надо не 12 часов&#44; а головой </strong> &#128521;
+      <strong>Работать нужно не 12 часов&#44; а головой </strong> &#128521;
     </footer>
   </body>
 </html>
