Add title img and edit avatar

--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
   </head>
   <body>
     <main>
+      <div class="logo-block">
+        <img class="logo" src="./assets/images/apple-inc.jpg" alt="head logo" />
+      </div>
       <article>
         <div class="page" style="border-color: midnightblue;">
           <div class="stackable grid">
-            <div class=" my-header">
+            <div class="my-header">
               <h2 class="name">Стивен Пол Джобс</h2>
               <div class="job">
                 Исполнительный директор &#44; глава совета директоров корпорации
@@ -59,7 +62,7 @@
                 <div class="avatar-wrapper">
                   <img
                     class="avatar"
-                    src="./assets/images/avatar.svg"
+                    src="./assets/images/jobs-min.jpg"
                     alt="Profile avatar"
                   />
                 </div>
@@ -577,8 +580,8 @@
         </div>
       </article>
     </main>
-    <footer>
-      <strong>Работать нужно не 12 часов&#44; а головой </strong> &#128521;
-    </footer>
   </body>
+  <footer>
+    <strong>Работать нужно не 12 часов&#44; а головой </strong> &#128521;
+  </footer>
 </html>
