Change after autotest

--- a/index.html
+++ b/index.html
@@ -116,11 +116,7 @@
                         </a>
                       </li>
                       <li>
-                        <a
-                          href="tel:+1 800 275 2273"
-                          rel="author"
-                          class="phone"
-                        >
+                        <a href="tel:+18002752273" rel="author" class="phone">
                           <svg
                             class="icon"
                             xmlns="http://www.w3.org/2000/svg"
@@ -208,8 +204,8 @@
                     </p>
                     <ul>
                       <li class="details">
-                        <input type="checkbox" id="other" />
-                        <label for="other" class="summary">
+                        <input type="checkbox" id="other-7" />
+                        <label for="other-7" class="summary">
                           Вклад в развитие корпорации:
                         </label>
                         <div>
@@ -274,8 +270,8 @@
                     </p>
                     <ul>
                       <li class="details">
-                        <input type="checkbox" id="other" />
-                        <label for="other" class="summary">
+                        <input type="checkbox" id="other-2" />
+                        <label for="other-2" class="summary">
                           Достяжения студии под моим руководством:
                         </label>
                         <div>
@@ -309,8 +305,8 @@
                     </p>
                     <ul>
                       <li class="details">
-                        <input type="checkbox" id="other" />
-                        <label for="other" class="summary">
+                        <input type="checkbox" id="other-3" />
+                        <label for="other-3" class="summary">
                           Маркетинговый вектор и концепции брэнда:
                         </label>
                         <div>
@@ -352,8 +348,8 @@
                     </p>
                     <ul>
                       <li class="details">
-                        <input type="checkbox" id="other" />
-                        <label for="other" class="summary">
+                        <input type="checkbox" id="other-4" />
+                        <label for="other-4" class="summary">
                           Полученный незаменимый опыт:
                         </label>
                         <div>
@@ -390,8 +386,8 @@
                     </p>
                     <ul>
                       <li class="details">
-                        <input type="checkbox" id="other" />
-                        <label for="other" class="summary">
+                        <input type="checkbox" id="other-5" />
+                        <label for="other-5" class="summary">
                           Ключевые моменты данного учебного периода:
                         </label>
                         <div>
@@ -429,8 +425,8 @@
                     </p>
                     <ul>
                       <li class="details">
-                        <input type="checkbox" id="other" />
-                        <label for="other" class="summary">
+                        <input type="checkbox" id="other-6" />
+                        <label for="other-6" class="summary">
                           Основные акценты образовательного процесса:
                         </label>
                         <div>
@@ -580,8 +576,8 @@
         </div>
       </article>
     </main>
+    <footer>
+      <strong>Работать нужно не 12 часов&#44; а головой </strong> &#128521;
+    </footer>
   </body>
-  <footer>
-    <strong>Работать нужно не 12 часов&#44; а головой </strong> &#128521;
-  </footer>
 </html>
